--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="carousel-item">
             <div class="carousel-img" style="background-image: url('https://images.unsplash.com/photo-1421789665209-c9b2a435e3dc?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1280&q=80') ;">
                 <div class="carousel-caption">
-                    <h1 class="display-4 font-weight-bold">The Freedom</h1>
+                    <h1 class="display-4 font-weight-both">The Freedom</h1>
                 </div>
                 <div class="backscreen"></div>
             </div>
@@ -74,6 +74,8 @@
         <span class="sr-only">Next</span>
     </a>
   </section>
+
+  
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
