Add section expectation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+  <!-- Section navbar--> 
+
   <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-alpha">
     <div class="container">
         <a class="navbar-brand text-danger" href="#">NaviZian</a>
@@ -33,6 +34,7 @@
     </div>
   </nav>
   
+  <!-- Section carousel-->
   <section id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -75,11 +77,18 @@
     </a>
   </section>
 
-  
+  <!-- Section Expectation-->
+  <section class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="border-short-bottom ">Nature In Life</h1>
+      <p class="lead">Freedom can be felt just by looking around you.</p>
+    </div>
+  </section>
 
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    
+
+  
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
