--- a/index.html
+++ b/index.html
@@ -10,27 +10,29 @@
 </head>
 <body>
   <!-- Section navbar--> 
-
+  
   <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-alpha">
     <div class="container">
-        <a class="navbar-brand text-danger" href="#">NaviZian</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarkey" aria-controls="navbarkey" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarkey">
-        <ul class="navbar-nav ml-auto mb-2 mb-lg-0 text-center">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
+      <a class="navbar-brand text-danger" href="#">NaviZian</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarkey" aria-controls="navbarkey" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarkey">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+        
       </div>
     </div>
   </nav>
