--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="them-footer p-5 text-center text-md-left">
+  <footer class="them-footer p-5 text-center text-md-center">
     <div class="row">
       <div class="col-md-3">
         <a class="footer-icon" href="" target="_blank" >
