--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       </div>
       <div class="col-md-4">
           <div class="map-footer">
-            <h4>Map</h4>
+            <box-icon name='map' type='solid' animation='fade-down-hover' size='lg'></box-icon>
             <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10683.564543968918!2d98.98037760998103!3d18.788771518455427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30da3a7e90bb6f5d%3A0x98d46270a59b4367!2z4LmA4LiX4Lio4Lia4Liy4Lil4LiZ4LiE4Lij4LmA4LiK4Li14Lii4LiH4LmD4Lir4Lih4LmIIOC4reC4s-C5gOC4oOC4reC5gOC4oeC4t-C4reC4h-C5gOC4iuC4teC4ouC4h-C5g-C4q-C4oeC5iCDguYDguIrguLXguKLguIfguYPguKvguKHguYg!5e0!3m2!1sth!2sth!4v1613206941111!5m2!1sth!2sth" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           </div>
       </div>
