--- a/about.html
+++ b/about.html
@@ -110,6 +110,32 @@
       </div>
     </div>
   </section>
+  
+  <!-- Section Pre-footer -->
+    <section class="position-relative py-md-5 jarallax" data-jarallax='{"speed:0.5"}'  style="background-image: url('https://images.unsplash.com/photo-1528818955841-a7f1425131b5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=889&q=80');">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 ">
+            <box-icon class="icon-tree" type='logo' name='spring-boot' size='lg'></box-icon>
+            <h2 class="display-4 font-weight-bold text-white">About Nature Future</h2>
+            <div class="star-rateting">
+              <span>☆</span>
+              <span>☆</span>
+              <span>☆</span>
+              <span>☆</span>
+              <span>☆</span>
+              <div class="star-current">
+                <span>★</span>
+                <span>★</span>
+                <span>★</span>
+                <span>★</span>
+                <span>★</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
   <!-- Footer -->
   <footer class="them-footer p-5 text-center text-md-center">
@@ -149,6 +175,7 @@
     </div>
   </footer>
 
+  
 
 
   
