--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Blog</a>
+          <a class="nav-link" href="blog.html">Blog</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
@@ -81,6 +81,7 @@
     </div>
   </section>
 
+  <!-- Section about -->
   <section class="container py-5">
     <div class="row">
       <div class="col-12">
@@ -175,7 +176,6 @@
     </div>
   </footer>
 
-<div></div>
 
 
   
